# hildon-thumbnail

./: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  dbusbindingtool_wrapper.py  generator_prefix_wrapper.py  git-make-dist  hildon-thumbnail.pc.in  meson.build  meson_options.txt  osso-thumbnail.pc.in  rc-clean-fail-thumbnail  svn-fill-tag
albumart-providers/: Makefile.am
albumart-providers/googleimages/: Makefile.am  com.nokia.albumart.AlbumartProvider.GoogleImages.service  com.nokia.albumart.GoogleImages.service.in  google-images-art-downloader.vala
daemon/: Makefile.am  README.plugin-runner  README.yourplugin  albumart-manager.c  albumart-manager.h  albumart-marshal.list  albumart.c  albumart.h  albumart.xml  com.nokia.albumart.service.in  dbus-utils.c  dbus-utils.h  generic.c  generic.h  generic.xml  hildon-thumbnail-daemon.c  hildon-thumbnail-plugin.c  hildon-thumbnail-plugin.h  manager.c  manager.h  manager.xml  md5.c  md5.h  meson.build  org.freedesktop.Thumbnailer.service.in  org.freedesktop.thumbnailer.service.in  pixbuf-io-loader.c  plugin-runner.c  plugin-runner.xml  plugins.h  thumb-hal.c  thumb-hal.h  thumbnail-manager.c  thumbnail-manager.h  thumbnailer-marshal.list  thumbnailer.c  thumbnailer.h  thumbnailer.xml  utils.c  utils.h
daemon/plugin/: Makefile.am  hildon-thumbnail-plugin.h
daemon/plugins/: Makefile.am  default.c  default.h  epeg-plugin.c  epeg-plugin.h  exec-plugin.c  exec-plugin.h  gdkpixbuf-jpeg-out-plugin.c  gdkpixbuf-plugin.c  gdkpixbuf-plugin.h  gdkpixbuf-png-out-plugin.c  gstreamer-video-plugin.c  gstreamer-video-plugin.h  image-png.xml  meson.build  pixbuf-io-loader.c
debian/: changelog  control  copyright  google-images-albumart-provider.install  hildon-thumbnail.dirs  hildon-thumbnail.install  libhildon-thumbnail-dev.install  libhildon-thumbnail0.install  osso-thumbnail-dev.install  osso-thumbnail.install  osso-thumbnail0.install  rules
doc/: Makefile.am  Makefile.in  osso-thumbnail-docs.xml
doc/tmpl/: osso-thumber-common.sgml  osso-thumbnail-factory.sgml
tests/: Makefile.am  Makefile.in  artist-art-test.c  daemon.c  daemon.xml  meson.build  testpaths.c  tests.c  thumbnailer3.c
thumbnailers/: Makefile.am  meson.build
thumbnailers/gst-video-thumbnailer/: Makefile.am  com.nokia.thumbnailer.Gstreamer.service.in  gst-thumb-main.c  gst-thumb-main.h  gst-thumb-pipe.c  gst-thumb-pipe.h  gst-thumb-thumber.c  gst-thumb-thumber.h  gst-video-thumbnailer-glue.h  gst-video-thumbnailer.xml  meson.build
thumbnailers/gst-video-thumbnailer/reg/: com.nokia.thumbnailer.Gstreamer.service
thumbs/: Makefile.am  Makefile.in  hildon-albumart-factory.c  hildon-albumart-factory.h  hildon-albumart-obj.c  hildon-thumber-common.h  hildon-thumbnail-factory.c  hildon-thumbnail-factory.h  hildon-thumbnail-obj.c  hildon-thumbnailer-wrap.sh  meson.build  osso-thumber-common.h  osso-thumbnail-factory.c  osso-thumbnail-factory.h  pixbuf-io-loader.h  thumber-common.c  thumber-gdk-pixbuf.c  thumber-register.c  thumbs-common.c  thumbs-private.h
