SUBDIRS = daemon thumbs albumart-providers

EXTRA_DIST = debian/changelog \
             debian/control \
             debian/copyright \
             debian/rules \
             debian/hildon-thumbnail.install \
             debian/libhildon-thumbnail0.install \
             debian/libhildon-thumbnail-dev.install \
             hildon-thumbnail.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = hildon-thumbnail.pc
