SUBDIRS = daemon thumbs thumbnailers tests

thumbnaildir=$(sysconfdir)/event.d
thumbnail_DATA = rc-clean-fail-thumbnail

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = hildon-thumbnail.pc

EXTRA_DIST = debian/changelog \
             debian/control \
             debian/copyright \
             debian/rules \
             debian/hildon-thumbnail.install \
             debian/libhildon-thumbnail0.install \
             debian/libhildon-thumbnail-dev.install \
             hildon-thumbnail.pc.in
